--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,13 +42,13 @@ jobs:
 
       - name: Add SSH known hosts 
         run: |
-         ssh-keyscan -t rsa ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+         ssh-keyscan -t rsa ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
 
       - name: Deploy to Dev server
         run: | #the shell script below loops over the number of IP adresses provided in the secrets.SSH_HOST and deploys the applicaiton
           for host in $(echo "${{ secrets.SSH_HOST }}" | tr ',' ' '); do
           echo "Deploying to $host"
-          ssh -o StrictHostKeyChecking=no ubuntu@$host << 'EOF'
+          ssh -o StrictHostKeyChecking=no ubuntu@$host <<EOF
           sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/quotes-app:${{ github.run_number }}
           sudo docker stop quotes-app || true
           sudo docker rm quotes-app || true
