--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,17 +47,17 @@ jobs:
       - name: Deploy to Dev server
         run: | #the shell script below loops over the number of IP adresses provided in the secrets.SSH_HOST and deploys the applicaiton
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.SSH_HOST_1 }} << 'EOF'
-          sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:latest
+          sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:${{ github.run_number }}
           sudo docker stop fastapi-app || true
           sudo docker rm fastapi-app || true
-          sudo docker run -d --name fastapi-app -p 8000:8000 ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:latest
+          sudo docker run -d --name fastapi-app -p 8000:8000 ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:${{ github.run_number }}
           EOF
 
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.SSH_HOST_2 }} << 'EOF'
-          sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:latest
+          sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:${{ github.run_number }}
           sudo docker stop fastapi-app || true
           sudo docker rm fastapi-app || true
-          sudo docker run -d --name fastapi-app -p 8000:8000 ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:latest
+          sudo docker run -d --name fastapi-app -p 8000:8000 ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:${{ github.run_number }}
           EOF
 
           
