--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: "Tag Docker Images"
         run: |
-         docker tag quotes-app:${{ github.run_number }} ${{ secrets.DOCKER_HUB_USERNAME }}/quotes-app:${{ github.run_number }}
+         docker tag quotes-app:${{ github.run_number }} ${{ secrets.DOCKER_HUB_USERNAME }}/quotes-app:latest
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3 
@@ -32,7 +32,7 @@ jobs:
 
       - name: "Push to Docker Hub"
         run: |
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/quotes-app:${{ github.run_number }}
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/quotes-app:latest
 
       - name: Add SSH private key
         run: |
@@ -47,17 +47,17 @@ jobs:
       - name: Deploy to Dev server
         run: | #the shell script below loops over the number of IP adresses provided in the secrets.SSH_HOST and deploys the applicaiton
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.SSH_HOST_1 }} << 'EOF'
-          sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:${{ github.run_number }}
+          sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:latest
           sudo docker stop fastapi-app || true
           sudo docker rm fastapi-app || true
-          sudo docker run -d --name fastapi-app -p 8000:8000 ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:${{ github.run_number }}
+          sudo docker run -d --name fastapi-app -p 8000:8000 ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:latest
           EOF
 
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.SSH_HOST_2 }} << 'EOF'
-          sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:${{ github.run_number }}
+          sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:latest
           sudo docker stop fastapi-app || true
           sudo docker rm fastapi-app || true
-          sudo docker run -d --name fastapi-app -p 8000:8000 ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:${{ github.run_number }}
+          sudo docker run -d --name fastapi-app -p 8000:8000 ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:latest
           EOF
 
           
