--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,12 +17,12 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Build Docker images
-        run: | #tagging with the current run_number to keep track  of each image per commit, to ease roll back in case of a failed deployment.
+        run: | 
           docker build -t quotes-app:latest .
 
       - name: "Tag Docker Images"
         run: |
-         docker tag quotes-app:${{ github.run_number }} ${{ secrets.DOCKER_HUB_USERNAME }}/quotes-app:latest
+         docker tag quotes-app:latest ${{ secrets.DOCKER_HUB_USERNAME }}/quotes-app:latest
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3 
