--- a/.github/workflows/condtnl-depl.yml
+++ b/.github/workflows/condtnl-depl.yml
@@ -1,10 +1,10 @@
 name: deploy
 
 on:
-  workflow_dispatch:
-    # push:
-    #   branches:
-    #     - solution
+  # workflow_dispatch:
+    push:
+      branches:
+        - solution
 
 jobs:
   deploy:
