--- a/.github/workflows/condtnl-depl.yml
+++ b/.github/workflows/condtnl-depl.yml
@@ -54,11 +54,11 @@ jobs:
       
           echo "Deploying to first server: $first_server"
           ssh -o StrictHostKeyChecking=no ubuntu@$first_server << 'EOF'
-            sudo docker pull ${DOCKER_HUB_USERNAME}/fastapi-app:latest
+            sudo docker pull ${DOCKER_HUB_USERNAME}/quotes-app:latest
             sudo docker stop fastapi-app || true
             sudo docker rm -f fastapi-app || true            
-            sudo docker run --env-file /home/ubuntu/.env -d --name fastapi-app -p 8000:8000 ${DOCKER_HUB_USERNAME}/fastapi-app:latest
-            EOF
+            sudo docker run --env-file /home/ubuntu/.env -d --name quotes-app -p 8000:8000 ${DOCKER_HUB_USERNAME}/quotes-app:latest
+          EOF
       
           echo "Waiting for service to start..."
           sleep 10  # Give some time for the service to start
@@ -68,11 +68,11 @@ jobs:
             echo "Health check passed! Proceeding to second server: $second_server"
             
             ssh -o StrictHostKeyChecking=no ubuntu@$second_server << 'EOF'
-              sudo docker pull ${DOCKER_HUB_USERNAME}/fastapi-app:latest
+              sudo docker pull ${DOCKER_HUB_USERNAME}/quotes-app:latest
               sudo docker stop fastapi-app || true
               sudo docker rm -f fastapi-app || true              
-              sudo docker run --env-file /home/ubuntu/.env -d --name fastapi-app -p 8000:8000 ${DOCKER_HUB_USERNAME}/fastapi-app:latest
-              EOF
+              sudo docker run --env-file /home/ubuntu/.env -d --name quotes-app -p 8000:8000 ${DOCKER_HUB_USERNAME}/quotes-app:latest
+            EOF
           else
             echo "Health check failed! Skipping deployment on second server."
             exit 1
