--- a/.github/workflows/condtnl-depl.yml
+++ b/.github/workflows/condtnl-depl.yml
@@ -54,10 +54,10 @@ jobs:
       
           echo "Deploying to first server: $first_server"
           ssh -o StrictHostKeyChecking=no ubuntu@$first_server << 'EOF'
-            sudo docker pull ${DOCKER_HUB_USERNAME}/quotes-app:latest
+            sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/quotes-app:latest
             sudo docker stop quotes-app || true
             sudo docker rm -f quotes-app || true            
-            sudo docker run --env-file /home/ubuntu/.env -d --name quotes-app -p 8000:8000 ${DOCKER_HUB_USERNAME}/quotes-app:latest
+            sudo docker run --env-file /home/ubuntu/.env -d --name quotes-app -p 8000:8000 ${{ secrets.DOCKER_HUB_USERNAME }}/quotes-app:latest
           EOF
       
           echo "Waiting for service to start..."
@@ -68,10 +68,10 @@ jobs:
             echo "Health check passed! Proceeding to second server: $second_server"
             
             ssh -o StrictHostKeyChecking=no ubuntu@$second_server << 'EOF'
-              sudo docker pull ${DOCKER_HUB_USERNAME}/quotes-app:latest
+              sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/quotes-app:latest
               sudo docker stop quotes-app || true
               sudo docker rm -f quotes-app || true              
-              sudo docker run --env-file /home/ubuntu/.env -d --name quotes-app -p 8000:8000 ${DOCKER_HUB_USERNAME}/quotes-app:latest
+              sudo docker run --env-file /home/ubuntu/.env -d --name quotes-app -p 8000:8000 ${{ secrets.DOCKER_HUB_USERNAME }}/quotes-app:latest
             EOF
           else
             echo "Health check failed! Skipping deployment on second server."
