--- a/.github/workflows/demo-2.yml
+++ b/.github/workflows/demo-2.yml
@@ -18,11 +18,11 @@ jobs:
 
       - name: Build Docker images
         run: | 
-          docker build -t quotes-app:latest .
+          docker build -t quotes-app:${{ github.run_number }} .
 
       - name: "Tag Docker Images"
         run: |
-         docker tag quotes-app:latest ${{ secrets.DOCKER_HUB_USERNAME }}/quotes-app:latest
+         docker tag quotes-app:${{ github.run_number }} ${{ secrets.DOCKER_HUB_USERNAME }}/quotes-app:${{ github.run_number }}
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3 
@@ -32,7 +32,7 @@ jobs:
 
       - name: "Push to Docker Hub"
         run: |
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/quotes-app:latest
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/quotes-app:${{ github.run_number }}
 
       - name: Add SSH private key
         run: |
@@ -55,10 +55,10 @@ jobs:
           scp -o StrictHostKeyChecking=no .env ubuntu@$host:/home/ubuntu/.env
           echo "Deploying to $host"
           ssh -o StrictHostKeyChecking=no ubuntu@$host << 'EOF'
-          sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/quotes-app:latest
+          sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/quotes-app:${{ github.run_number }}
           sudo docker stop quotes-app || true
           sudo docker rm quotes-app || true
-          sudo docker run --env-file /home/ubuntu/.env -d --name quotes-app -p 8000:8000 ${{ secrets.DOCKER_HUB_USERNAME }}/quotes-app:latest
+          sudo docker run --env-file /home/ubuntu/.env -d --name quotes-app -p 8000:8000 ${{ secrets.DOCKER_HUB_USERNAME }}/quotes-app:${{ github.run_number }}
           EOF
           done
 
